tests/error/misc_errors/unreachable_4.py
from tests.error.util import guppy


@guppy
def foo(x: bool) -> int:
    while x:
        continue
        x = 42
